Added project titles to each project display tile in each of the category pages

--- a/projects/commercial.html
+++ b/projects/commercial.html
@@ -20,10 +20,11 @@
         <!-- 역삼동 오피스텔 태양광 발전사업 2021 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="오피스텔 이미지">
-                <a href="../project-detail.html?id=solar-officetel&cat=solar">
+                <a href="../project-detail.html?id=solar-officetel&cat=commercial">
                     <img src="projectimages/오피스텔1.png" alt="오피스텔 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>역삼동 오피스텔 태양광 발전사업 2021</b></p>
         </div> 
 
         <!-- 구미환경개선펀드 -->
@@ -33,6 +34,7 @@
                     <img src="projectimages/구미환경개선펀드1.png" alt="구미환경개선펀드 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>구미 환경개선펀드 2016</b></p>
         </div>
 
         <!-- 구미지식산업센터 -->
@@ -42,6 +44,7 @@
                     <img src="projectimages/구미지식산업센터1.png" alt="구미지식산업센터 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>구미 지식산업센터 2015</b></p>
         </div>
 
         <!-- 웰스톤시티 -->
@@ -51,6 +54,7 @@
                     <img src="projectimages/웰스톤시티1.png" alt="웰스톤시티 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>웰스톤시티 입면 및 조경차별화 2014</b></p>
         </div>
 
         <!-- 한국도자기 -->
@@ -60,6 +64,7 @@
                     <img src="projectimages/한국도자기1.png" alt="한국도자기 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>한국도자기 사옥 리모델링 2014</b></p>
         </div>
 
         <!-- 세화사옥 -->
@@ -69,6 +74,7 @@
                     <img src="projectimages/세화사옥1.png" alt="세화사옥 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>세화사옥 신축공사 2014</b></p>
         </div>
 
         <!-- 광희동 -->
@@ -78,6 +84,7 @@
                     <img src="projectimages/광희동1.png" alt="광희동 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>광희동 근린생활시설 2013</b></p>
         </div>
 
         <!-- 신내동 -->
@@ -87,6 +94,7 @@
                     <img src="projectimages/신내동1.png" alt="신내동 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>신내동 근린생활시설 2013</b></p>
         </div>
 
         <!-- 안양우리병원 -->
@@ -96,6 +104,7 @@
                     <img src="projectimages/안양우리병원1.png" alt="안양우리병원 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>안양 우리병원 2013</b></p>
         </div>
 
         <!-- 삼성동업무시설 -->
@@ -105,6 +114,7 @@
                     <img src="projectimages/삼성동업무시설1.png" alt="삼성동업무시설 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>삼성동 업무시설 2013</b></p>
         </div>
 
         <!-- 삼성동지명현상 -->
@@ -114,6 +124,7 @@
                     <img src="projectimages/삼성동지명현상1.png" alt="삼성동지명현상 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>삼성동 업무시설 지명현상 2012</b></p>
         </div>
 
         <!-- 달빌딩 -->
@@ -123,6 +134,7 @@
                     <img src="projectimages/달빌딩1.png" alt="달빌딩 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>역삼동 달빌딩 업무시설 2012</b></p>
         </div>
 
         <!-- 매표화학 -->
@@ -132,6 +144,7 @@
                     <img src="projectimages/매표화학1.png" alt="매표화학 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>매표화학 사옥 2011</b></p>
         </div>
 
         <!-- HADO 호텔 -->
@@ -141,6 +154,7 @@
                     <img src="projectimages/HADO1.png" alt="HADO 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>하노이 HADO HOTEL 2009</b></p>
         </div>
 
         <!-- MIPEC -->
@@ -150,6 +164,7 @@
                     <img src="projectimages/MIPEC1.png" alt="MIPEC 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>하노이 MIPEC 주상복합 2009</b></p>
         </div>
 
         <!-- 안산 이풀 -->
@@ -159,6 +174,7 @@
                     <img src="projectimages/안산이풀1.png" alt="안산이풀 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>안산 이풀 실내박물관 2013</b></p>
         </div>
 
     </div>
