--- a/projects/oversea.html
+++ b/projects/oversea.html
@@ -24,6 +24,7 @@
                     <img src="projectimages/잠수교1.png" alt="잠수교 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>잠수교, 문화의 다리 (2024)</b></p>
         </div>
         
         <!-- 쌍령근린공원 -->
@@ -33,9 +34,8 @@
                     <img src="projectimages/쌍령근린공원1.png" alt="쌍령근린공원 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>쌍령근린공원 민간공원조성 특례사업 / Children's Dream Center &amp; Eco Museum</b></p>
         </div>
-
-       
 
     </div>
 
