--- a/projects/residential.html
+++ b/projects/residential.html
@@ -24,6 +24,7 @@
                     <img src="projectimages/인천무주골공원1.png" alt="인천무주골공원 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>인천무주골공원 한화포레나 (2021)</b></p>
         </div>
 
         <!-- 원평동 금오 -->
@@ -33,6 +34,7 @@
                     <img src="projectimages/원평동금오1.png" alt="원평동 금오 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>원평동 금오 복합건축물 (2016)</b></p>
         </div>
 
         <!-- 광주시 양벌리 -->
@@ -42,6 +44,7 @@
                     <img src="projectimages/광주시양벌리1.png" alt="광주시 양벌리 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>광주시 양벌리 공동주택 (2015)</b></p>
         </div>
 
         <!-- 상봉동 관광숙박 -->
@@ -51,6 +54,7 @@
                     <img src="projectimages/상봉동관광숙박1.png" alt="상봉동 관광숙박 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>상봉동 관광숙박 (2015)</b></p>
         </div>
 
         <!-- 용인 동천동 -->
@@ -60,6 +64,7 @@
                     <img src="projectimages/용인동천동1.png" alt="용인 동천동 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>용인 동천동 단독주택단지 (2015)</b></p>
         </div>
 
         <!-- 원주 중앙근린공원 -->
@@ -69,6 +74,7 @@
                     <img src="projectimages/원주중앙근린공원1.png" alt="원주 중앙근린공원 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>원주 중앙근린공원 아파트 (2015)</b></p>
         </div>
 
         <!-- 의정부 직동근린공원 -->
@@ -78,6 +84,7 @@
                     <img src="projectimages/의정부직동근린공원1.png" alt="의정부 직동근린공원 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>의정부 직동근린공원 아파트 (2015)</b></p>
         </div>
 
         <!-- 옥천 두산위브 -->
@@ -87,6 +94,7 @@
                     <img src="projectimages/옥천두산위브1.png" alt="옥천 두산위브 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>옥천 두산위브 아파트 (2015)</b></p>
         </div>
 
         <!-- 청라지구 CURIO BOX -->
@@ -96,6 +104,7 @@
                     <img src="projectimages/청라지구1.png" alt="청라지구 CURIO BOX 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>청라지구 CURIO BOX (2014)</b></p>
         </div>
 
         <!-- 고양 삼송지구 -->
@@ -105,6 +114,7 @@
                     <img src="projectimages/삼송지구1.png" alt="고양 삼송지구 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>고양 삼송지구 (2014)</b></p>
         </div>
 
         <!-- 한남동 리모델링 -->
@@ -114,6 +124,7 @@
                     <img src="projectimages/용산구한남동1.png" alt="용산구 한남동 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>용산구 한남동 OO빌딩 리모델링 (2013)</b></p>
         </div>
 
         <!-- 신당동 주상복합 -->
@@ -123,6 +134,7 @@
                     <img src="projectimages/신당동주상복합1.png" alt="신당동 주상복합 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>신당동 주상복합 (2012)</b></p>
         </div>
 
         <!-- 은평구 갈현동 -->
@@ -132,6 +144,7 @@
                     <img src="projectimages/은평구갈현동1.png" alt="은평구 갈현동 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>은평구 갈현동 OO다세대주택 (2012)</b></p>
         </div>
 
         <!-- 서초구 방배동 -->
@@ -141,6 +154,7 @@
                     <img src="projectimages/서초구방배동1.png" alt="서초구 방배동 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>서초구 방배동 OO다세대주택 (2012)</b></p>
         </div>
 
         <!-- 용인시 수지구 고기동 -->
@@ -150,6 +164,7 @@
                     <img src="projectimages/용인시수지구1.png" alt="용인시 수지구 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>용인시 수지구 고기동 단독주택 (2012)</b></p>
         </div>
 
         <!-- 면목동 도시형 -->
@@ -159,6 +174,7 @@
                     <img src="projectimages/면목동도시형1.png" alt="면목동 도시형 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>면목동 도시형 생활주택 (2011)</b></p>
         </div>
 
         <!-- 천안시 청수동 -->
@@ -168,6 +184,7 @@
                     <img src="projectimages/천안시청수동1.png" alt="천안시 청수동 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>천안시 청수동 경남 아너스빌 (2010)</b></p>
         </div>
 
         <!-- 송파동 공동주택 -->
@@ -177,6 +194,7 @@
                     <img src="projectimages/서울시송파동1.png" alt="송파동 공동주택 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>서울시 송파동 OO 공동주택 (2010)</b></p>
         </div>
 
         <!-- 가산 도시형 -->
@@ -186,6 +204,7 @@
                     <img src="projectimages/가산도시형1.png" alt="가산 도시형 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>가산 도시형 생활주택 (2010)</b></p>
         </div>
 
         <!-- 길동 도시형 -->
@@ -195,6 +214,7 @@
                     <img src="projectimages/길동도시형1.png" alt="길동 도시형 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>길동 도시형 생활주택 A,B블럭 (2010)</b></p>
         </div>
 
         <!-- 인천 만석지구 -->
@@ -204,6 +224,7 @@
                     <img src="projectimages/인천만석지구1.png" alt="인천 만석지구 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>인천 만석지구 (2010)</b></p>
         </div>
 
         <!-- 장충동 도시형 -->
@@ -213,6 +234,7 @@
                     <img src="projectimages/장충동도시형1.png" alt="장충동 도시형 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>장충동 도시형 생활주택 (2009)</b></p>
         </div>
 
         <!-- 와천동 주상복합 -->
@@ -222,6 +244,7 @@
                     <img src="projectimages/와천동주상복합1.png" alt="와천동 주상복합 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>천안시 와천동 주상복합 아파트</b></p>
         </div>
 
         <!-- 봉명동 주상복합 -->
@@ -231,6 +254,7 @@
                     <img src="projectimages/봉명동주상복합1.png" alt="봉명동 주상복합 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>대전 봉명동 주상복합 아파트</b></p>
         </div>
 
         <!-- 삼송 비축용 -->
@@ -240,6 +264,7 @@
                     <img src="projectimages/고양삼송비축용1.png" alt="고양 삼송 비축용 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>고양 삼송 비축용 임대주택 (2008)</b></p>
         </div>
 
         <!-- 분당 한솔마을 -->
@@ -249,6 +274,7 @@
                     <img src="projectimages/한솔마을1.png" alt="한솔마을 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>분당 정자동 한솔마을 주공5단지 리모델링 (2008)</b></p>
         </div>
 
         <!-- 대치동 현대1차 -->
@@ -258,6 +284,7 @@
                     <img src="projectimages/현대1차1.png" alt="현대1차 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>대치동 현대1차 아파트 리모델링 (2008)</b></p>
         </div>
 
         <!-- 목동 유원아파트 -->
@@ -267,6 +294,7 @@
                     <img src="projectimages/유원아파트1.png" alt="유원아파트 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>목동 유원아파트 리모델링 (2008)</b></p>
         </div>
 
         <!-- 둔촌동 현대 -->
@@ -276,6 +304,7 @@
                     <img src="projectimages/둔촌동현대1.png" alt="둔촌동 현대 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>둔촌동 현대1차 리모델링 (2007)</b></p>
         </div>
 
         <!-- 안산 주상복합 -->
@@ -285,6 +314,7 @@
                     <img src="projectimages/안산주상복합1.png" alt="안산 주상복합 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>안산 OO주상복합 계획안 (2007)</b></p>
         </div>
 
         <!-- 우동 주상복합 -->
@@ -294,6 +324,7 @@
                     <img src="projectimages/우동주상복합1.png" alt="우동 주상복합 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>부산 해운대 우동 주상복합 (2006)</b></p>
         </div>
 
         <!-- 마산 회원 재개발 -->
@@ -303,6 +334,7 @@
                     <img src="projectimages/마산회원1.png" alt="마산 회원 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>마산 회원 3구역 재개발 (2006)</b></p>
         </div>
 
         <!-- 평창 롯데캐슬 -->
@@ -312,6 +344,7 @@
                     <img src="projectimages/롯데캐슬1.png" alt="평창동 롯데캐슬 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>평창동 롯데캐슬 포디움 (2006)</b></p>
         </div>
 
         <!-- 삼성동 단독주택 -->
@@ -321,6 +354,7 @@
                     <img src="projectimages/삼성동단독주택1.png" alt="삼성동 단독주택 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>삼성동 단독주택 (2014)</b></p>
         </div>
 
         <!-- 투스카니힐스 -->
@@ -330,6 +364,7 @@
                     <img src="projectimages/투스카니힐스1.png" alt="투스카니힐스 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>투스카니힐스 Exterior (2011)</b></p>
         </div>
 
     </div>
