--- a/projects/solar.html
+++ b/projects/solar.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>기타</title>
     <link rel="stylesheet" href="../style.css">
-
 </head>
 <body>
     <header class="header">
@@ -16,34 +15,38 @@
     <hr class="rule">
     <div class="project-gallery">
 
+        <!-- 오성산 관광 자원화 컨셉 공모 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="오성산 이미지">
                 <a href="../project-detail.html?id=solar-oseongsan&cat=solar">
                     <img src="projectimages/오성산1.jpg" alt="오성산 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>오성산 관광 자원화 컨셉 공모 (태양광발전 및 BIPV 제안) 2022</b></p>
         </div>
 
+        <!-- 역삼동 오피스텔 태양광 발전사업 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="오피스텔 이미지">
                 <a href="../project-detail.html?id=solar-officetel&cat=solar">
                     <img src="projectimages/오피스텔1.png" alt="오피스텔 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>역삼동 오피스텔 태양광 발전사업 2021</b></p>
         </div>   
 
-   
+        <!-- 함평 나비 축제 주차장 태양광 발전 사업 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="나비 이미지">
                 <a href="../project-detail.html?id=solar-nabi&cat=solar">
                     <img src="projectimages/나비1.png" alt="나비 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>함평 나비 축제 주차장 태양광 발전 사업 2009</b></p>
         </div>
 
     </div>
 
-        
     <a href="../project.html" class="button button--project">
         For more projects
     </a>
