--- a/projects/plant.html
+++ b/projects/plant.html
@@ -25,6 +25,7 @@
                     <img src="projectimages/삼우메디안1.png" alt="삼우메디안 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>삼우메디안 예산공장 증축공사 2016</b></p>
         </div>
 
         <!-- 바이오씨앤디 -->
@@ -34,6 +35,7 @@
                     <img src="projectimages/바이오씨앤디1.png" alt="바이오씨앤디 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>바이오씨앤디 강릉공장 증축공사 2016</b></p>
         </div>
 
         <!-- 하나제약 -->
@@ -43,6 +45,7 @@
                     <img src="projectimages/하나제약1.png" alt="하나제약 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>하나제약(주) 발안 GMP공장</b></p>
         </div>
 
         <!-- 휴젤 -->
@@ -52,6 +55,7 @@
                     <img src="projectimages/휴젤1.png" alt="휴젤 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>휴젤(주) 춘천공장 신축공사</b></p>
         </div>
 
         <!-- 한미약품 -->
@@ -61,6 +65,7 @@
                     <img src="projectimages/한미약품1.png" alt="한미약품 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>한미약품(주) 평택공장 신축공사</b></p>
         </div>
 
         <!-- 한국코러스 -->
@@ -70,6 +75,7 @@
                     <img src="projectimages/한국코러스1.png" alt="한국코러스 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>한국코러스 제약(주) 춘천공장 증축공사</b></p>
         </div>
 
         <!-- 줄기세포 -->
@@ -79,29 +85,30 @@
                     <img src="projectimages/줄기세포·재생센터1.png" alt="줄기세포 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>국립 줄기세포·재생센터 건립공사</b></p>
         </div>
 
+        <!-- 가톨릭 중앙의료원 GMP -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="GMP 이미지">
                 <a href="../project-detail.html?id=hospital-CatholicGMP&cat=plant">
                     <img src="projectimages/GMP1.png" alt="GMP 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>가톨릭 중앙의료원 세포실험실 GMP</b></p>
         </div>
 
+        <!-- 연세대학교 BSL3 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="BSL3 이미지">
                 <a href="../project-detail.html?id=hospital-BSL3&cat=plant">
                     <img src="projectimages/BSL3_1.png" alt="BSL3 1">
                 </a>
             </div>
+            <p style="text-align: center"><b>연세대학교 의료원 동물실험실 BSL3(크린룸)</b></p>
         </div>
 
-
     </div>
-
-    
-
 
     <a href="../project.html" class="button button--project">For more projects</a>
     <hr class="rule">
