Added in some of the projects within Medical that has no additional pictures or resources

--- a/projects/plant.html
+++ b/projects/plant.html
@@ -13,12 +13,11 @@
     </header>
 
     <hr class="rule">
-    <h4 class="section__subtitle">병원, 제약, 공장</h4>
+    <h4 class="section__subtitle" style="text-align: center;">병원, 제약, 공장</h4>
     <hr class="rule">
 
     <div class="project-gallery">
 
-        <!-- 삼우메디안 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="삼우메디안 이미지">
                 <a href="../project-detail.html?id=samwoo-median&cat=plant">
@@ -28,7 +27,6 @@
             <p style="text-align: center"><b>삼우메디안 예산공장 증축공사 2016</b></p>
         </div>
 
-        <!-- 바이오씨앤디 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="바이오씨앤디 이미지">
                 <a href="../project-detail.html?id=bio-cnd&cat=plant">
@@ -38,7 +36,6 @@
             <p style="text-align: center"><b>바이오씨앤디 강릉공장 증축공사 2016</b></p>
         </div>
 
-        <!-- 하나제약 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="하나제약 이미지">
                 <a href="../project-detail.html?id=hana-gmp&cat=plant">
@@ -48,7 +45,6 @@
             <p style="text-align: center"><b>하나제약(주) 발안 GMP공장</b></p>
         </div>
 
-        <!-- 휴젤 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="휴젤 이미지">
                 <a href="../project-detail.html?id=hugelkorea&cat=plant">
@@ -58,7 +54,6 @@
             <p style="text-align: center"><b>휴젤(주) 춘천공장 신축공사</b></p>
         </div>
 
-        <!-- 한미약품 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="한미약품 이미지">
                 <a href="../project-detail.html?id=hanmi&cat=plant">
@@ -68,7 +63,6 @@
             <p style="text-align: center"><b>한미약품(주) 평택공장 신축공사</b></p>
         </div>
 
-        <!-- 한국코러스 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="한국코러스 이미지">
                 <a href="../project-detail.html?id=koreacorus&cat=plant">
@@ -78,7 +72,6 @@
             <p style="text-align: center"><b>한국코러스 제약(주) 춘천공장 증축공사</b></p>
         </div>
 
-        <!-- 줄기세포 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="줄기세포 이미지">
                 <a href="../project-detail.html?id=stemcell&cat=plant">
@@ -88,7 +81,6 @@
             <p style="text-align: center"><b>국립 줄기세포·재생센터 건립공사</b></p>
         </div>
 
-        <!-- 가톨릭 중앙의료원 GMP -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="GMP 이미지">
                 <a href="../project-detail.html?id=hospital-CatholicGMP&cat=plant">
@@ -98,7 +90,6 @@
             <p style="text-align: center"><b>가톨릭 중앙의료원 세포실험실 GMP</b></p>
         </div>
 
-        <!-- 연세대학교 BSL3 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="BSL3 이미지">
                 <a href="../project-detail.html?id=hospital-BSL3&cat=plant">
@@ -110,9 +101,41 @@
 
     </div>
 
-    <a href="../project.html" class="button button--project">For more projects</a>
-    <hr class="rule">
-    <a href="../index.html" class="button button--project">Back to home page</a>
+    <section class="section container">
+        <hr class="rule--accent">
+        <h3 class="section__title" style="text-align: center;">기타 병원 및 제약 주요 실적</h3>
+        <p class="subtitle" style="text-align: center; margin-bottom: 30px;">Technical Experience Record</p>
+
+        <div class="experience-table-wrapper">
+            <table class="experience-table">
+                <thead>
+                    <tr>
+                        <th>발주처 (Client)</th>
+                        <th>프로젝트명 (Project Name)</th>
+                        <th>구분 (Category)</th>
+                        <th>연도 (Year)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>동탄한림대병원</td><td>종합검진센터 / ICU(중환자실) 확충공사</td><td>의료시설</td><td>2022</td></tr>
+                    <tr><td>순천의료원</td><td>음압격리병실 확충공사 설계 및 감리</td><td>의료시설</td><td>2021-2023</td></tr>
+                    <tr><td>연세대학교 의료원</td><td>진단검사의학과 음압검사실 / 세포처리실</td><td>의료시설</td><td>2018</td></tr>
+                    <tr><td>서울아산병원</td><td>의료기기 GMP 신설</td><td>의료시설</td><td>2018</td></tr>
+                    <tr><td>중앙대학교병원</td><td>긴급치료병동(음압 및 중환자실) / 선형가속기실</td><td>의료시설</td><td>2023-2025</td></tr>
+                    <tr><td>부천성모병원</td><td>방사선종양학과(MRI / 치료실)</td><td>의료시설</td><td>2022-2023</td></tr>
+                    <tr><td>강진의료원</td><td>감염병동 음압격리병실 확충공사</td><td>의료시설</td><td>2023</td></tr>
+                    <tr><td>강동경희대학교병원</td><td>중환자실 및 음압격리병실</td><td>의료시설</td><td>2018</td></tr>
+                    <tr><td>(주)다산메디켐</td><td>의약품제조소 제2공장 증축 (GMP)</td><td>제약시설</td><td>2018</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+    <div style="text-align: center; padding-top: 40px;">
+        <a href="../project.html" class="button button--project">For more projects</a>
+        <hr class="rule">
+        <a href="../index.html" class="button button--project">Back to home page</a>
+    </div>
 
 </body>
 </html>
